test.txt
Script started on Fri Feb  3 15:09:58 2023
[?1034h[31m15:09:58[0m:[33marm64[0m:[32m~/c[0m$ clang-tidy A\=\^_\^\=.cpp 
4697 warnings and 1 error generated.
Error while processing /Users/gera/c/A=^_^=.cpp.
[0;1;31merror: [0m[1minvalid case style for template parameter 'expr-type' [readability-identifier-naming,-warnings-as-errors][0m
[1m/Users/gera/c/A=^_^=.cpp:16:10: [0m[0;1;31merror: [0m[1minclusion of deprecated C++ header 'string.h'; consider using 'cstring' instead [modernize-deprecated-headers,-warnings-as-errors][0m
#include <string.h>
[0;1;32m         ^~~~~~~~~~
[0m[0;32m         <cstring>
[0m[1m/Users/gera/c/A=^_^=.cpp:34:23: [0m[0;1;31merror: [0m[1minvalid case style for function 'getint' [readability-identifier-naming,-warnings-as-errors][0m
static inline int64_t getint() {
[0;1;32m                      ^~~~~~
[0m[0;32m                      Getint
[0m[1m/Users/gera/c/A=^_^=.cpp:36:9: [0m[0;1;31merror: [0m[1mvariable 'c' is not initialized [cppcoreguidelines-init-variables,-warnings-as-errors][0m
    int c;
[0;1;32m        ^
[0m[0;32m          = 0
[0m[1m/Users/gera/c/A=^_^=.cpp:38:47: [0m[0;1;31merror: [0m[1mstatement should be inside braces [readability-braces-around-statements,-warnings-as-errors][0m
    while (c = getchar_unlocked(), isspace(c))
[0;1;32m                                              ^
[0m[0;32m                                               {
[0m[1m/Users/gera/c/A=^_^=.cpp:49:12: [0m[0;1;31merror: [0m[1mC-style casts are discouraged; use static_cast [google-readability-casting,-warnings-as-errors][0m
    return (int64_t)(res)*sign;
[0;1;32m           ^~~~~~~~~
[0m[0;32m           static_cast<int64_t>
[0m[1m/Users/gera/c/A=^_^=.cpp:52:7: [0m[0;1;31merror: [0m[1minvalid case style for type alias 'llu' [readability-identifier-naming,-warnings-as-errors][0m
using llu = long long unsigned;
[0;1;32m      ^~~
[0m[0;32m      Llu
[0m[1m/Users/gera/c/A=^_^=.cpp:52:13: [0m[0;1;31merror: [0m[1mconsider replacing 'unsigned long long' with 'uint64_t' [google-runtime-int,-warnings-as-errors][0m
using llu = long long unsigned;
[0;1;32m            ^
[0m[1m/Users/gera/c/A=^_^=.cpp:53:7: [0m[0;1;31merror: [0m[1minvalid case style for type alias 'lli' [readability-identifier-naming,-warnings-as-errors][0m
using lli = long long;
[0;1;32m      ^~~
[0m[0;32m      Lli
[0m[1m/Users/gera/c/A=^_^=.cpp:53:13: [0m[0;1;31merror: [0m[1mconsider replacing 'long long' with 'int64_t' [google-runtime-int,-warnings-as-errors][0m
using lli = long long;
[0;1;32m            ^
[0m[1m/Users/gera/c/A=^_^=.cpp:63:15: [0m[0;1;31merror: [0m[1minvalid case style for template parameter 'n' [readability-identifier-naming,-warnings-as-errors][0m
template <llu n>
[0;1;32m              ^
[0m[0;32m              N
[0m[1m/Users/gera/c/A=^_^=.cpp:64:8: [0m[0;1;31merror: [0m[1minvalid case style for struct 'sized' [readability-identifier-naming,-warnings-as-errors][0m
struct sized {
[0;1;32m       ^~~~~
[0m[0;32m       Sized
[0m[1m/Users/gera/c/A=^_^=.cpp:68:20: [0m[0;1;31merror: [0m[1minvalid case style for template parameter 't0' [readability-identifier-naming,-warnings-as-errors][0m
template <typename t0 = sized<0>, typename t1 = sized<0>, typename t2 = sized<0>, typename t3 = sized<0>,
[0;1;32m                   ^~
[0m[0;32m                   T0
[0m[1m/Users/gera/c/A=^_^=.cpp:68:44: [0m[0;1;31merror: [0m[1minvalid case style for template parameter 't1' [readability-identifier-naming,-warnings-as-errors][0m
template <typename t0 = sized<0>, typename t1 = sized<0>, typename t2 = sized<0>, typename t3 = sized<0>,
[0;1;32m                                           ^~
[0m[0;32m                                           T1
[0m[1m/Users/gera/c/A=^_^=.cpp:68:68: [0m[0;1;31merror: [0m[1minvalid case style for template parameter 't2' [readability-identifier-naming,-warnings-as-errors][0m
template <typename t0 = sized<0>, typename t1 = sized<0>, typename t2 = sized<0>, typename t3 = sized<0>,
[0;1;32m                                                                   ^~
[0m[0;32m                                                                   T2
[0m[1m/Users/gera/c/A=^_^=.cpp:68:92: [0m[0;1;31merror: [0m[1minvalid case style for template parameter 't3' [readability-identifier-naming,-warnings-as-errors][0m
template <typename t0 = sized<0>, typename t1 = sized<0>, typename t2 = sized<0>, typename t3 = sized<0>,
[0;1;32m                                                                                           ^~
[0m[0;32m                                                                                           T3
[0m[1m/Users/gera/c/A=^_^=.cpp:69:20: [0m[0;1;31merror: [0m[1minvalid case style for template parameter 't4' [readability-identifier-naming,-warnings-as-errors][0m
          typename t4 = sized<0>, typename t5 = sized<0>, typename t6 = sized<0>, typename t7 = sized<0>>
[0;1;32m                   ^~
[0m[0;32m                   T4
[0m[1m/Users/gera/c/A=^_^=.cpp:69:44: [0m[0;1;31merror: [0m[1minvalid case style for template parameter 't5' [readability-identifier-naming,-warnings-as-errors][0m
          typename t4 = sized<0>, typename t5 = sized<0>, typename t6 = sized<0>, typename t7 = sized<0>>
[0;1;32m                                           ^~
[0m[0;32m                                           T5
[0m[1m/Users/gera/c/A=^_^=.cpp:69:68: [0m[0;1;31merror: [0m[1minvalid case style for template parameter 't6' [readability-identifier-naming,-warnings-as-errors][0m
          typename t4 = sized<0>, typename t5 = sized<0>, typename t6 = sized<0>, typename t7 = sized<0>>
[0;1;32m                                                                   ^~
[0m[0;32m                                                                   T6
[0m[1m/Users/gera/c/A=^_^=.cpp:69:92: [0m[0;1;31merror: [0m[1minvalid case style for template parameter 't7' [readability-identifier-naming,-warnings-as-errors][0m
          typename t4 = sized<0>, typename t5 = sized<0>, typename t6 = sized<0>, typename t7 = sized<0>>
[0;1;32m                                                                                           ^~
[0m[0;32m                                                                                           T7
[0m[1m/Users/gera/c/A=^_^=.cpp:71:8: [0m[0;1;31merror: [0m[1minvalid case style for struct 't' [readability-identifier-naming,-warnings-as-errors][0m
struct t {
[0;1;32m       ^
[0m[0;32m       T
[0m[1m/Users/gera/c/A=^_^=.cpp:82:15: [0m[0;1;31merror: [0m[1minvalid case style for template parameter 'n' [readability-identifier-naming,-warnings-as-errors][0m
template <llu n = 0, typename T, typename R>
[0;1;32m              ^
[0m[0;32m              N
[0m[1m/Users/gera/c/A=^_^=.cpp:84:6: [0m[0;1;31merror: [0m[1minvalid case style for function 'clear_tuple' [readability-identifier-naming,-warnings-as-errors][0m
auto clear_tuple(T t = tuple<>(), R r = tuple<>()) {
[0;1;32m     ^~~~~~~~~~~
[0m[0;32m     ClearTuple
[0m[1m/Users/gera/c/A=^_^=.cpp:84:37: [0m[0;1;31merror: [0m[1munused parameter 'r' [clang-diagnostic-unused-parameter][0m
auto clear_tuple(T t = tuple<>(), R r = tuple<>()) {
[0;1;32m                                    ^
[0m[1m/Users/gera/c/A=^_^=.cpp:88:15: [0m[0;1;31merror: [0m[1minvalid case style for template parameter 'n' [readability-identifier-naming,-warnings-as-errors][0m
template <llu n = 0, typename T, typename R>
[0;1;32m              ^
[0m[0;32m              N
[0m[1m/Users/gera/c/A=^_^=.cpp:90:6: [0m[0;1;31merror: [0m[1minvalid case style for function 'clear_tuple' [readability-identifier-naming,-warnings-as-errors][0m
auto clear_tuple(T t = tuple<>(), R r = tuple<>()) {
[0;1;32m     ^~~~~~~~~~~
[0m[0;32m     ClearTuple
[0m[1m/Users/gera/c/A=^_^=.cpp:95:6: [0m[0;1;31merror: [0m[1minvalid case style for function 't2tuple' [readability-identifier-naming,-warnings-as-errors][0m
auto t2tuple(t<T...> r) {
[0;1;32m     ^~~~~~~
[0m[0;32m     T2tuple
[0m[1m/Users/gera/c/A=^_^=.cpp:101:6: [0m[0;1;31merror: [0m[1minvalid case style for function 'to_str' [readability-identifier-naming,-warnings-as-errors][0m
auto to_str(t<T...> r) {
[0;1;32m     ^~~~~~
[0m[0;32m     ToStr
[0m[1m/Users/gera/c/A=^_^=.cpp:147:8: [0m[0;1;31merror: [0m[1minvalid case style for struct 'assign_s' [readability-identifier-naming,-warnings-as-errors][0m
struct assign_s {
[0;1;32m       ^~~~~~~~
[0m[0;32m       AssignS
[0m[1m/Users/gera/c/A=^_^=.cpp:171:6: [0m[0;1;31merror: [0m[1minvalid case style for function 'prefix_fun' [readability-identifier-naming,-warnings-as-errors][0m
auto prefix_fun(auto&& s) {
[0;1;32m     ^~~~~~~~~~
[0m[0;32m     PrefixFun
[0m[1m/Users/gera/c/A=^_^=.cpp:187:5: [0m[0;1;31merror: [0m[1mmultiple declarations in a single statement reduces readability [readability-isolate-declaration,-warnings-as-errors][0m
    string s, p;
[0;1;32m    ^~~~~~~~~~~~
[0mSuppressed 4667 warnings (4663 in non-user code, 4 with check filters).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
30 warnings treated as errors
[31m15:10:06[0m:[33marm64[0m:[32m~/c[0m$ exit

Script done on Fri Feb  3 15:10:07 2023
